--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -1,16 +1,31 @@
 <%- include("partials/header")%>
-<h1>This is the campground page</h1>
-<% campgrounds.forEach(function(campground){ %>
-<div>
-  <h4><%= campground.name %></h4>
-  <img src="<%= campground.image  %>">
+
+<div class="container">
+<header class="jumbotron">
+  <div class="container">
+    <h1>Welcome to yelp!</h1>
+    <p>We have handpicked all the campgrounds across India</p>
+    <p>
+      <a class="btn btn-primary btn-large" href="/campgrounds/new"> Add new campground</a>
+    </p>
+  </div>
+</header>
+
+<div class="row text-center" style="display:flex;flex-wrap: wrap;">
+  <% campgrounds.forEach(function(campground){ %>
+    <div class="col-md-3 col-sm-6" >
+      <div class="thumbnail">
+        <img src="<%= campground.image  %>">
+          <div class="caption">
+            <h4><%= campground.name %></h4>
+          </div>  
+      </div>
+
+    </div>
+
+<% }); %>
 </div>
 
-<%  %>
-<% }); %>
-<%  %>
-<%  %>
-<%  %>
-<%  %>
+</div>
 <%- include("partials/footer")%>
 
