--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,10 @@
         <img src="<%= campground.image  %>">
           <div class="caption">
             <h4><%= campground.name %></h4>
-          </div>  
+          </div>
+          <p>
+            <a href="/campgrounds/<%= campground._id %>" class="btn btn-primary">More Info</a>
+          </p>
       </div>
 
     </div>
